<resources>
    <string name="app_name">BonusRunningBeforeYou</string>
    <string name="btSubmit">START</string>
    <string name="textSubmit">跑步</string>
    <string name="tsStart">START</string>
    <string name="textUser">會員</string>
    <string name="textFilled">目標</string>
    <string name="textFriendShip">社交</string>
    <string name="textShop">商城</string>
    <string name="SHOP">點數商城</string>
    <string name="couponid">CouponId</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="details">商品詳情</string>
    <string name="timeStart"> </string>
    <string name="kiloRunning">0.0 km</string>
    <string name="social">社交</string>
    <string name="exchange">確認兌換</string>
</resources>
