<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:padding="6dp"
    app:cardBackgroundColor="@color/colorGray"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvcoupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/couponid"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tvquantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvcoupon"
            android:text="@string/quantity"
            android:textColor="@color/colorRed" />

        <TextView
            android:id="@+id/tvprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="320dp"
            android:text="@string/price"
            android:textColor="@color/colorGold"
            android:textSize="16dp"/>

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="55dp"
            android:src="@drawable/pizzahot" />


        <ImageView
            android:id="@+id/dollar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="267dp"
            android:src="@drawable/dollar" />

        <Button
            android:id="@+id/details"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="100dp"
            android:text="@string/details"
            android:background="@drawable/shopbutton_rounde"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</android.support.v7.widget.CardView>